row de párrafos para tamaño grande

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <script src="https://kit.fontawesome.com/67b890a7ad.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -29,7 +30,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quienes Somos</a>
+                        <a class="nav-link" href="#">Quiénes Somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Destacados</a>
@@ -41,7 +42,7 @@
             </div>
         </div>
     </nav>
-
+    <!--Carrusel en Header-->
     <header>
         <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
@@ -67,6 +68,43 @@
             </button>
         </div>
     </header>
+    <!--Row de párrafos para tamaño grande-->
+    <div class="container-fluid d-none d-md-block bg-dark">
+        <h3 class="text-center">¿QUIÉNES SOMOS</h3>
+        <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-4 text-center">
+                    <div class="bg-info"><i class="fa-solid fa-plane"></i></div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
+                        dolor!
+                        Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
+                        similique adipisci sit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+                        dignissimos nobis autem error sed laboriosam officia corrupti, illum quia nulla voluptatum
+                        asperiores magni assumenda vitae alias rerum. Assumenda, cumque magnam!</p>
+                </div>
+                <div class="col-4 text-center">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
+                        dolor!
+                        Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
+                        similique adipisci sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                        ex harum excepturi, repellendus tempora debitis pariatur rerum odio dicta sed. Quos nostrum
+                        dicta rem laboriosam est placeat dolorum. Officiis, voluptates! </p>
+                    <div class="bg-info"><i class="fa-solid fa-mountain-sun"></i></div>
+                </div>
+                <div class="col-4 text-center">
+                    <div class="bg-info"><i class="fa-solid fa-route "></i></div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
+                        dolor!
+                        Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
+                        similique adipisci sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eius
+                        ducimus voluptas dolores et mollitia quasi quidem, quos animi corrupti quibusdam, sapiente
+                        molestias earum? Ut cumque eaque fugit fugiat in!</p>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 
 
