--- a/index.html
+++ b/index.html
@@ -105,6 +105,58 @@
         </div>
 
     </div>
+    <!--Cards-->
+    <div class="container-fluid bg-dark">
+        <div class="container">
+            <h3 class="text-center">DESTACADOS</h3>
+            <br>
+            <div class="row gx-3 gy-3">
+                <div class="col-12 col-md-3">
+                    <div class="card bg-info">
+                        <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                                corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem laborum,
+                                similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3">
+                    <div class="card bg-info">
+                        <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                                corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem laborum,
+                                similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3">
+                    <div class="card bg-info">
+                        <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                                corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem laborum,
+                                similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3">
+                    <div class="card bg-info">
+                        <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
+                                corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem laborum,
+                                similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
 
 
 
