--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!--Row de párrafos para tamaño grande-->
     <div class="container-fluid d-none d-md-block bg-dark">
         <h3 class="text-center">¿QUIÉNES SOMOS</h3>
-        <br>
+        <hr>
         <div class="container">
             <div class="row">
                 <div class="col-4 text-center">
@@ -109,7 +109,7 @@
     <div class="container-fluid bg-dark">
         <div class="container">
             <h3 class="text-center">DESTACADOS</h3>
-            <br>
+            <hr>
             <div class="row gx-3 gy-3">
                 <div class="col-12 col-md-3">
                     <div class="card bg-info">
@@ -151,12 +151,31 @@
                         </div>
                     </div>
                 </div>
-
             </div>
-
         </div>
 
     </div>
+    <!--Formulario de contacto-->
+    <div class="container-fluid bg-dark">
+        <div class="container">
+            <form>
+                <div class="mb-3">
+                    <label for="nombre" class="form-label">Nombre</label>
+                    <input type="name" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="asunto" class="form-label">Asunto</label>
+                    <input type="name" class="form-control">
+                </div>
+                <div class="mb-3">
+                    <label for="mensaje" class="form-label">Mensaje</label>
+                    <textarea class="form-control" rows="8"></textarea>
+                  </div>
+                <button type="submit" class="btn btn-info">Enviar</button>
+            </form>
+        </div>
+    </div>
+
 
 
 
