--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
 <body>
     <!--NavBar-->
+
     <nav class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container-fluid px-5">
             <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg"> Viajes Chile</a>
@@ -69,112 +70,144 @@
         </div>
     </header>
     <!--Row de párrafos para tamaño grande-->
-    <div class="container-fluid d-none d-md-block bg-dark">
-        <h3 class="text-center">¿QUIÉNES SOMOS</h3>
-        <hr>
-        <div class="container">
-            <div class="row">
-                <div class="col-4 text-center">
-                    <div class="bg-info"><i class="fa-solid fa-plane"></i></div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
-                        dolor!
-                        Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
-                        similique adipisci sit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
-                        dignissimos nobis autem error sed laboriosam officia corrupti, illum quia nulla voluptatum
-                        asperiores magni assumenda vitae alias rerum. Assumenda, cumque magnam!</p>
-                </div>
-                <div class="col-4 text-center">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
-                        dolor!
-                        Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
-                        similique adipisci sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-                        ex harum excepturi, repellendus tempora debitis pariatur rerum odio dicta sed. Quos nostrum
-                        dicta rem laboriosam est placeat dolorum. Officiis, voluptates! </p>
-                    <div class="bg-info"><i class="fa-solid fa-mountain-sun"></i></div>
-                </div>
-                <div class="col-4 text-center">
-                    <div class="bg-info"><i class="fa-solid fa-route "></i></div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
-                        dolor!
-                        Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
-                        similique adipisci sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eius
-                        ducimus voluptas dolores et mollitia quasi quidem, quos animi corrupti quibusdam, sapiente
-                        molestias earum? Ut cumque eaque fugit fugiat in!</p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <!--Cards-->
-    <div class="container-fluid bg-dark">
-        <div class="container">
-            <h3 class="text-center">DESTACADOS</h3>
+    <section>
+        <div class="container-fluid d-none d-md-block bg-dark">
+            <h3 class="text-center">¿QUIÉNES SOMOS</h3>
             <hr>
-            <div class="row gx-3 gy-3">
-                <div class="col-12 col-md-3">
-                    <div class="card bg-info">
-                        <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-                                corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem laborum,
-                                similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
-                        </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-4 text-center">
+                        <div class="bg-info"><i class="fa-solid fa-plane"></i></div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
+                            dolor!
+                            Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
+                            similique adipisci sit! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+                            dignissimos nobis autem error sed laboriosam officia corrupti, illum quia nulla voluptatum
+                            asperiores magni assumenda vitae alias rerum. Assumenda, cumque magnam!</p>
+                    </div>
+                    <div class="col-4 text-center">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
+                            dolor!
+                            Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
+                            similique adipisci sit! Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Necessitatibus
+                            ex harum excepturi, repellendus tempora debitis pariatur rerum odio dicta sed. Quos nostrum
+                            dicta rem laboriosam est placeat dolorum. Officiis, voluptates! </p>
+                        <div class="bg-info"><i class="fa-solid fa-mountain-sun"></i></div>
+                    </div>
+                    <div class="col-4 text-center">
+                        <div class="bg-info"><i class="fa-solid fa-route "></i></div>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore rem sit sequi id, officiis
+                            dolor!
+                            Magnam, rem neque doloribus consequuntur quam accusamus repellat quaerat esse labore. Natus
+                            similique adipisci sit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum eius
+                            ducimus voluptas dolores et mollitia quasi quidem, quos animi corrupti quibusdam, sapiente
+                            molestias earum? Ut cumque eaque fugit fugiat in!</p>
                     </div>
                 </div>
-                <div class="col-12 col-md-3">
-                    <div class="card bg-info">
-                        <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-                                corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem laborum,
-                                similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+            </div>
+
+        </div>
+    </section>
+    <!--Cards-->
+    <section>
+        <div class="container-fluid bg-dark">
+            <div class="container">
+                <h3 class="text-center">DESTACADOS</h3>
+                <hr>
+                <div class="row gx-3 gy-3">
+                    <div class="col-12 col-md-3">
+                        <div class="card bg-info">
+                            <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Necessitatibus
+                                    corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem
+                                    laborum,
+                                    similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-3">
-                    <div class="card bg-info">
-                        <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-                                corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem laborum,
-                                similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                    <div class="col-12 col-md-3">
+                        <div class="card bg-info">
+                            <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Necessitatibus
+                                    corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem
+                                    laborum,
+                                    similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-12 col-md-3">
-                    <div class="card bg-info">
-                        <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
-                        <div class="card-body">
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus
-                                corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem laborum,
-                                similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                    <div class="col-12 col-md-3">
+                        <div class="card bg-info">
+                            <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Necessitatibus
+                                    corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem
+                                    laborum,
+                                    similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-3">
+                        <div class="card bg-info">
+                            <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+                            <div class="card-body">
+                                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                    Necessitatibus
+                                    corporis maiores molestias illo quo, earum explicabo iste quaerat nulla in rem
+                                    laborum,
+                                    similique nesciunt veniam cumque repellat. Voluptatibus, sapiente consequuntur.</p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+        </div>
+    </section>
+    <!--Formulario de contacto-->
+    <section>
+        <div class="container-fluid bg-dark py-5">
+            <div class="container">
+                <form>
+                    <div class="mb-3">
+                        <label for="nombre" class="form-label">Nombre</label>
+                        <input type="name" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="asunto" class="form-label">Asunto</label>
+                        <input type="name" class="form-control">
+                    </div>
+                    <div class="mb-3">
+                        <label for="mensaje" class="form-label">Mensaje</label>
+                        <textarea class="form-control" rows="8"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-info">Enviar</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <!--Footer-->
+    <footer>
+        <div class="container-fluid bg-info py-5 px-5">
+            <div class="row justify-content-evenly">
+                <div class="col-12 col-md-2">
+                    <p>VIAJES CHILE</p>
+                </div>
+                <div class="col-12 col-md-2">
+                    <a href="www.github.com"><i class="fa-brands fa-github"></i></a>
+                    <a href="www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+            </div>
         </div>
 
-    </div>
-    <!--Formulario de contacto-->
-    <div class="container-fluid bg-dark">
-        <div class="container">
-            <form>
-                <div class="mb-3">
-                    <label for="nombre" class="form-label">Nombre</label>
-                    <input type="name" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label for="asunto" class="form-label">Asunto</label>
-                    <input type="name" class="form-control">
-                </div>
-                <div class="mb-3">
-                    <label for="mensaje" class="form-label">Mensaje</label>
-                    <textarea class="form-control" rows="8"></textarea>
-                  </div>
-                <button type="submit" class="btn btn-info">Enviar</button>
-            </form>
-        </div>
-    </div>
+    </footer>
 
 
 
