--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                         <a class="nav-link active" aria-current="page" href="#">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quiénes Somos</a>
+                        <a class="nav-link" href="#section1">Quiénes Somos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Destacados</a>
+                        <a class="nav-link" href="#section2">Destacados</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#section3">Contacto</a>
                     </li>
                 </ul>
             </div>
@@ -71,7 +71,7 @@
     </header>
     <!--Row de párrafos para tamaño grande-->
     <section>
-        <div class="container-fluid d-none d-md-block bg-dark">
+        <div class="container-fluid d-none d-md-block bg-dark py-4" id="section1">
             <h3 class="text-center">¿QUIÉNES SOMOS</h3>
             <hr>
             <div class="container">
@@ -111,7 +111,7 @@
     </section>
     <!--Cards-->
     <section>
-        <div class="container-fluid bg-dark">
+        <div class="container-fluid bg-dark" id="section2">
             <div class="container">
                 <h3 class="text-center">DESTACADOS</h3>
                 <hr>
@@ -171,8 +171,8 @@
     </section>
     <!--Formulario de contacto-->
     <section>
-        <div class="container-fluid bg-dark py-5">
-            <div class="container">
+        <div class="container-fluid bg-dark py-5" id="section3">
+            <div class="container" id="">
                 <form>
                     <div class="mb-3">
                         <label for="nombre" class="form-label">Nombre</label>
@@ -186,7 +186,8 @@
                         <label for="mensaje" class="form-label">Mensaje</label>
                         <textarea class="form-control" rows="8"></textarea>
                     </div>
-                    <button type="submit" class="btn btn-info">Enviar</button>
+                    <div id="liveAlertPlaceholder"></div>
+                    <button type="submit" class="btn btn-info" id="liveAlertBtn">Enviar</button>
                 </form>
             </div>
         </div>
@@ -198,7 +199,7 @@
                 <div class="col-12 col-md-2">
                     <p>VIAJES CHILE</p>
                 </div>
-                <div class="col-12 col-md-2">
+                <div class="col-12 col-md-2 ">
                     <a href="www.github.com"><i class="fa-brands fa-github"></i></a>
                     <a href="www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
                     <a href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
