correciones al footer y jquery

--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
         <div class="container-fluid bg-info py-5 px-5">
             <div class="row justify-content-evenly">
                 <div class="col-12 col-md-2">
-                    <p>VIAJES CHILE</p>
+                    <p class="fs-4">VIAJES CHILE</p>
                 </div>
-                <div class="col-12 col-md-2 ">
-                    <a href="www.github.com"><i class="fa-brands fa-github"></i></a>
-                    <a href="www.linkedin.com"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="www.facebook.com"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="www.twitter.com"><i class="fa-brands fa-twitter"></i></a>
+                <div class="col-12 col-md-2 text-center">
+                    <a href="www.github.com"><i class="fa-brands fa-github icono"></i></a>
+                    <a href="www.linkedin.com"><i class="fa-brands fa-linkedin icono"></i></a>
+                    <a href="www.facebook.com"><i class="fa-brands fa-facebook icono"></i></a>
+                    <a href="www.twitter.com"><i class="fa-brands fa-twitter icono"></i></a>
                 </div>
             </div>
         </div>
