--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top" data-bs-theme="dark">
         <div class="container-fluid px-5">
-            <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg"> Viajes Chile</a>
+            <a class="navbar-brand" href="#"><img src="assets/img/viajes.svg" alt="logo_viajes"> Viajes Chile</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -172,18 +172,18 @@
     <!--Formulario de contacto-->
     <section>
         <div class="container-fluid bg-dark py-5" id="section3">
-            <div class="container" id="">
+            <div class="container">
                 <form>
                     <div class="mb-3">
-                        <label for="nombre" class="form-label">Nombre</label>
-                        <input type="name" class="form-control">
+                        <label class="form-label">Nombre</label>
+                        <input type="text" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="asunto" class="form-label">Asunto</label>
-                        <input type="name" class="form-control">
+                        <label class="form-label">Asunto</label>
+                        <input type="text" class="form-control">
                     </div>
                     <div class="mb-3">
-                        <label for="mensaje" class="form-label">Mensaje</label>
+                        <label class="form-label">Mensaje</label>
                         <textarea class="form-control" rows="8"></textarea>
                     </div>
                     <div id="liveAlertPlaceholder"></div>
