metas en el head

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Diego">
+    <meta name="description" content="Desafío GitHub">
+    <meta name="keywords" content="front-end, framework, responsividad">
     <title>Viajes Chile </title>
     <link rel="icon" type="image/png" href="assets/img/viajes.svg">
     <link
