responsividad del footer

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     <footer>
         <div class="container-fluid bg-info py-5 px-5">
             <div class="row justify-content-evenly">
-                <div class="col-12 col-md-2">
+                <div class="col-12 col-md-2 text-center">
                     <p class="fs-4">VIAJES CHILE</p>
                 </div>
                 <div class="col-12 col-md-2 text-center">
