--- a/index.html
+++ b/index.html
@@ -176,6 +176,8 @@
     <section>
         <div class="container-fluid bg-dark py-5" id="section3">
             <div class="container">
+                <h3 class="text-center">CONTACTO</h3>
+                <hr>
                 <form>
                     <div class="mb-3">
                         <label class="form-label">Nombre</label>
