correciones de estilo y gramática

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <!--Row de párrafos para tamaño grande-->
     <section>
         <div class="container-fluid d-none d-md-block bg-dark py-4" id="section1">
-            <h3 class="text-center">¿QUIÉNES SOMOS</h3>
+            <h3 class="text-center">¿QUIÉNES SOMOS?</h3>
             <hr>
             <div class="container">
                 <div class="row">
@@ -121,7 +121,7 @@
                 <div class="row gx-3 gy-3">
                     <div class="col-12 col-md-3">
                         <div class="card bg-info">
-                            <img src="assets/img/card1.jpg" class="card-img-top" alt="...">
+                            <img src="assets/img/card1.jpg" class="card-img-top" alt="card1">
                             <div class="card-body">
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Necessitatibus
@@ -133,7 +133,7 @@
                     </div>
                     <div class="col-12 col-md-3">
                         <div class="card bg-info">
-                            <img src="assets/img/card2.jpg" class="card-img-top" alt="...">
+                            <img src="assets/img/card2.jpg" class="card-img-top" alt="card2">
                             <div class="card-body">
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Necessitatibus
@@ -145,7 +145,7 @@
                     </div>
                     <div class="col-12 col-md-3">
                         <div class="card bg-info">
-                            <img src="assets/img/card3.jpg" class="card-img-top" alt="...">
+                            <img src="assets/img/card3.jpg" class="card-img-top" alt="card3">
                             <div class="card-body">
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Necessitatibus
@@ -157,7 +157,7 @@
                     </div>
                     <div class="col-12 col-md-3">
                         <div class="card bg-info">
-                            <img src="assets/img/card4.jpg" class="card-img-top" alt="...">
+                            <img src="assets/img/card4.jpg" class="card-img-top" alt="card4">
                             <div class="card-body">
                                 <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                                     Necessitatibus
